--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
-
-# Testing
-coverage/
-
-# Production
-dist/
-dist-ssr/
-build/
-
-# Misc
-.DS_Store
-*.local
+# Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -21,18 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Editor
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# Environment
 .env
-.env.local
-.env.production.local
-.env.development.local
